update purchase statistics and update managers service add status updating
