# statistics/src/main/go/com.github/docs/swagger.json
@@ -236,15 +236,6 @@
                         "name": "status",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Update purchase",
-                        "name": "purchase",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ManagerDto"
-                        }
                     }
                 ],
                 "responses": {
@@ -320,6 +311,45 @@
                             "$ref": "#/definitions/dto.PurchaseDto"
                         }
                     }
+                }
+            }
+        },
+        "/v1/purchases/manager/edit/{orderId}/{status}": {
+            "post": {
+                "description": "Update purchase by status",
+                "tags": [
+                    "purchases"
+                ],
+                "summary": "Update purchase by status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order ID",
+                        "name": "orderId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Order Status",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Create manager purchase",
+                        "name": "purchase",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ManagerDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {},
+                    "403": {},
+                    "404": {}
                 }
             }
         },
