# statistics/src/main/go/com.github/handlers/rest_handler.go
@@ -44,6 +44,9 @@ func (handler *RestHandler) Handler() http.Handler {
 		HandleFunc("/v1/purchases/edit", handler.purchaseHandler.CreatePurchase).
 		Methods(http.MethodPost)
 	router.
+		HandleFunc("/v1/purchases/manager/edit/{orderId}/{status}", handler.purchaseHandler.CreateManagerPurchase).
+		Methods(http.MethodPost)
+	router.
 		HandleFunc("/v1/purchases/edit/{orderId}/{status}", handler.purchaseHandler.UpdateStatusPurchase).
 		Methods(http.MethodPut)
 	router.
